@@ -1,3 +1,8 @@
+2009-06-27
+
+  Button bugfix. [Mion]
+
+
 2009-06-23
 
   Changed "wait" command to do an actual timed wait even in ctrl/skip mode,
